# Oran7MediaClient

./: .gitattributes  CMakeLists.txt  LICENSE  Oran7MediaPlayer.h  PACKAGING_GUIDE.md  README.md  app.rc  appjsonconfigmanager.cpp  applicationcontext.cpp  applicationcontext.h  bilibliliveroomaddresscatch.cpp  bilibliliveroomaddresscatch.h  client.cpp  client.h  d3d11deviceprovider.cpp  d3d11deviceprovider.h  d3d11videoitem.cpp  d3d11videoitem.h  database.cpp  ffmsg.h  ffmsgqueue.cpp  ffmsgqueue.h  ffplay_def.cpp  ffplayer.cpp  ffplayer.h  filehelper.cpp  globalhelper.cpp  globalhelper.h  loadingdatahandler.h  loginhandler.h  main.cpp  main.qml  oran7mediaplayer.cpp  oran7screencapture.cpp  oran7screencapture.h  qml.qrc  res.qrc  sever.h
SQLite/: userLocal.db
Src/Basic/: BasicConfig.qml
Src/BottomPage/: BottomPage.qml
Src/Components/: DelayTimer.qml  EAnimatedWindow.qml  EBlurCard.qml  ETheme.qml  Oran7AnimatedWindow.qml  Oran7AuthorBriefItem.qml  Oran7DelayTimer.qml  Oran7ESelectRect.qml  Oran7FileDialog.qml  Oran7Loader.qml  Oran7MusicPlaylistView.qml  Oran7PlayerVolumeComponent.qml  Oran7ProgressSlider.qml  Oran7ScreenCapture.qml  Oran7ScreenCaptureComponent.qml  Oran7VideoRendererItem.qml  VideoRendererItem.qml  WaveBarChartDemo.qml  WaveBarChart_README.md  qmldir
Src/LeftPage/: LeftPage.qml
Src/RightPage/: RightPage.qml
Src/RightPage/MainStackView/: LocalMusicStack.qml  MainStackView.qml  MyFavoriteMusicStack.qml  ScreenCaptureStack.qml  SettingStack.qml  VideoPlayerStack.qml
Src/RightPage/TopMenuBar/: SearchPopup.qml  TopLeftBar.qml  TopRightBar.qml
Src/Settings/GlobalSettings/: Oran7MainUiSetting.qml
Src/Settings/SettingWindows/: Oran7MainUiSettingWindow.qml  Oran7MediaPlayerSettingWindow.qml  Oran7SettingsContainerWindow.qml
code/GlobalSingleton/: GlobalEventFilter.cpp  GlobalEventFilter.h  appjsonconfigmanager.cpp  asyncmanagers.cpp  client.cpp  client.h
code/Oran7MediaPlayer/: ImageScaler.h  ffplay_def.cpp  ffplayer.cpp  ffplayer.h  oran7mediaplayer.cpp
code/Oran7ScreenCapture/: oran7screencapture.cpp  oran7screencapture.h
code/Oran7Sever/: database.cpp  database.h  loadingdatahandler.cpp  loginhandler.cpp  protocolhandler.h  sever.cpp
code/Oran7VideoGPURender/: d3d11deviceprovider.cpp  d3d11deviceprovider.h  d3d11videoitem.cpp  d3d11videoitem.h  d3d11videorendernode.cpp  d3d11videorendernode.h
code/QtQuicCppExtend/: FramelessWindow.cpp  FramelessWindow.h  filehelper.h
config/: config.json  default.json  profile-default.json
config/themeJson/: Index.json  Oran7CaptionBar.json  Oran7MainGUI.json  Oran7MusicLyricsWindow.json  Oran7MusicPlayControls.json  Oran7MusicPlaylistView.json  Oran7ProgressSlider.json
ffmpeg6.0/include/SDL2/: SDL_cpuinfo.h
ffmpeg6.0/include/libavcodec/: mathops.h
ffmpeg6.0/include/libavutil/: internal.h  timer.h  wchar_filename.h
ffmpeg6.0/lib/: avfilter.lib  avformat.lib  avutil-58.def  avutil.lib  fdk-aac.dll.lib  fdk-aac.lib  libx264.lib  postproc.lib  swscale.lib  x265.lib
ffmpeg6.0/lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  sdl2.pc  x265.pc
shaders/: NOTE.txt  VideoPlayerRenderGLSL.frag  VideoPlayerRenderGLSL.vert  bgra2rgba_ps.hlsl  bgra2rgba_vs.hlsl  video.frag  video.vert
src/cpp/GlobalSingleton/: AppJsonConfigManager.cpp  AppJsonConfigManager.h  ApplicationContext.cpp  ApplicationContext.h  AsyncManagers.cpp  AsyncManagers.h  BilibiliAuthManager.cpp  BilibiliAuthManager.h  Client.cpp  Client.h  ConsoleLogger.h  GlobalEventFilter.cpp  GlobalEventFilter.h  GlobalHelper.cpp  GlobalHelper.h  LrcParser.cpp  LrcParser.h  LyricsModel.cpp  LyricsModel.h  OnlineLyricsFetcher.h  Oran7MediaClient.cpp  Oran7MediaClient.h  Oran7SoundEffect.h  Oran7ThemeProfileManager.cpp  Oran7ThemeProfileManager.h  WindowApi.cpp  WindowApi.h
src/cpp/Oran7MediaPlayer/: BilibliLiveRoomAddressCatch.cpp  BilibliLiveRoomAddressCatch.h  FFMsgQueue.cpp  FFPlay_Def.cpp  FFPlay_Def.h  FFPlayer.cpp  FFPlayer.h  ImageScaler.h  Oran7MediaPlayer.cpp  Oran7MediaPlayer.h  Sonic.cpp
src/cpp/Oran7ScreenCapture/: Oran7ScreenCapture.cpp  Oran7ScreenCapture.h
src/cpp/Oran7Sever/: DataBase.cpp  LoadingDataHandler.cpp  LoadingDataHandler.h  LoginHandler.cpp  Sever.cpp  Sever.h  loginhandler.h
src/cpp/Oran7Utils/: Oran7Definitions.h
src/cpp/Oran7VideoGPURender/: D3d11DeviceProvider.cpp  D3d11VideoRenderNode.cpp  D3d11VideoRenderNode.h  D3d11Videoitem.cpp  d3d11videoitem.h
src/cpp/QtQuicCppExtend/: FramelessWindow.cpp  FramelessWindow.h  Oran7Api.cpp  Oran7Api.h  Oran7ColorGenerator.cpp  Oran7ColorGenerator.h  Oran7FileHelper.cpp  Oran7FileHelper.h  Oran7RadiusGenerator.cpp  Oran7RadiusGenerator.h  Oran7SizeGenerator.cpp  Oran7SizeGenerator.h  Oran7Theme.cpp  Oran7Theme.h  Oran7ThemeFunctions.cpp  Oran7ThemeFunctions.h  Oran7Theme_p.h  Oran7WindowAgent.cpp  Oran7WindowAgent.h
src/qml/Basic/: BasicConfig.qml  qmldir
src/qml/BottomPage/: BottomPage.qml
src/qml/Components/: LyricsView.qml  Oran7AnimatedWindow.qml  Oran7AuthorBriefItem.qml  Oran7BlurCard.qml  Oran7CaptionBar.qml  Oran7ColorPickerWindow.qml  Oran7ColorPickerWindowExample.qml  Oran7ESelectRect.qml  Oran7FileDialog.qml  Oran7GradientMask.qml  Oran7MusicPlayControls.qml  Oran7MusicPlaylistView.qml  Oran7PlayerVolumeComponent.qml  Oran7ProgressSlider.qml  Oran7RoundedImage.qml  Oran7ScreenCaptureComponent.qml  Oran7ValueSlider.qml  Oran7VideoRendererItem.qml  Oran7WaveBarChart.qml  WindowControlButton.qml
src/qml/Components/Oran7SettingUiWindowItems/: Oran7ColorCheckBox.qml  Oran7ColorDialog.qml  Oran7ColorSelectItem.qml  Oran7ColorSettingGroup.qml  Oran7ExpandItem.qml  Oran7GroupDiveLine.qml  Oran7NumSettingGroup.qml  Oran7OpenFolderItem.qml  Oran7SetingTitleItem.qml  Oran7SettingItem.qml  Oran7SwitchToggleItem.qml  Oran7TextFieldItem.qml
src/qml/LeftPage/: LeftPage.qml
src/qml/RightPage/: RightPage.qml
src/qml/RightPage/MainStackView/: LocalMusicStack.qml  MainStackView.qml  MyFavoriteMusicStack.qml  ScreenCaptureStack.qml  VideoPlayerStack.qml
src/qml/RightPage/TopMenuBar/: BilibiliLoginPopup.qml  LoginPopup.qml  MainLoginPopup.qml  (+1 more)
(+8 files in other folders)
